--- a/register-form/scss/style.scss
+++ b/register-form/scss/style.scss
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");
+
+$font-family-inter: "Inter", sans-serif;
+$font-family-lexend: "Lexend Deca", sans-serif;
 
 *,
 *::before,
@@ -13,7 +17,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: $font-family-lexend;
   font-weight: 400;
 }
 
